<resources>


    <string name="app_name">IHMProjet_2019_2020_TD5_Bateaux</string>

    <string-array name="natures">
        <item>Fire</item>
        <item>Heavy Rain</item>
        <item>Pollution</item>
        <item>Sailing or Fishing in unauthorized area </item>
        <item>Storm</item>
        <item>Unauthorized entry</item>
        <item>Other</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="welcome">Welcome</string>

    <string name="home">Home</string>
    <string name="directions">Directions</string>
    <string name="incidents">Incidents</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="welcome_from_home_activity">Welcome from Home Activity</string>

    <string-array name="tempSpinner">
        <item></item>
        <item>Fehrnhite</item>
        <item>Celecius</item>
    </string-array>

    <string-array name="langue">
        <item></item>
        <item>English</item>
        <item>French</item>
    </string-array>

    <string-array name="format">
        <item></item>
        <item>24 Hours</item>
        <item>12 Hours</item>
    </string-array>


    <string-array name="notification">
        <item></item>
        <item>Urgent notifications</item>
        <item>All notifications</item>
    </string-array>

    <string-array name="precipitation">
        <item></item>
        <item>Percentage</item>
        <item>milimeter</item>
    </string-array>


    <string-array name="windspeed">
        <item></item>
        <item>KM/H</item>
    </string-array>


    <string-array name="pressure">
        <item></item>
        <item>hPa</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature">Temperature</string>
    <string name="Edit_Report" translatable="false">Edit Report</string>
    <string name="Apply_Changes" translatable="false">Apply Changes</string>
    <string name="language">Language</string>
    <string name="timeformat">Time format</string>
    <string name="precipitation">Precipitation</string>
    <string name="windspeed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="notificatin">Urgent notifications</string>
    <string name="about_title">About Us</string>
    <string name="add_incident">ADD INCIDENT</string>
    <string name="select_nature">Select the nature</string>
    <string name="repport">Report</string>
    <string name="uregent_post">Urgent POST</string>
    <string name="classic_post">classic POST</string>
    <string name="give_des">describe the incident</string>
    <string name="add_photo">Add Photo</string>
    <string name="city">NICE</string>
    <string name="longitude">Longitude</string>
    <string name="latitude" translatable="false">Latitude</string>
    <string name="humidity">Humidity</string>
    <string name="description">Description</string>
    <string name="sea">Sea level</string>
    <string name="temp_min" translatable="false">Temp min</string>
    <string name="temp_max" translatable="false">Temp max</string>
    <string name="ground">Ground level</string>
    <string name="time_zone">Timezone</string>
    <string name="setting">SETTINGS</string>
    <string name="des_frag">hello from directions page</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="search">Search</string>
    <string name="about_text">Neptune is a marine weather application, jam-packed with information at just a glance.
    Although not a great option for daily planning, the Neptune really shines as a weeklong forecast so you can plan the perfect time for that weekend cruise.
    Neptune allows you to consult detailed weather forecasts for more than 15 days, with the possibility of receiving alerts,the application is available in several languages.
    Its simple slide navigation also makes storm-tracking a mesmerizing experience.  Thanks to Neptune you can save forecasts and navigate safely in the ocean.</string>
    <string name="option">Do you want to post it on Facebook too?</string>
    <string name="yes">yes</string>
    <string name="No">No</string>
    <string name="not_available" translatable="false">N/A</string>

    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="placeName" translatable="false">Ville:inconnue</string>

    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="take_photo"> Take Photo</string>
    <string name="from_Gallery"> From Gallery</string>
    <string name="urgent">Urgent</string>
    <string name="add_post">Post</string>
    <string name="timezone" translatable="false">Timezone</string>
    <string name="visibility" translatable="false">Visibility</string>
    <string name="sunrise" translatable="false">Sunrise</string>
    <string name="sunset" translatable="false">Sunset</string>
    <string name="feels_like">Feels like</string>
</resources>
