<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/search_icon"
        android:icon="@drawable/ic_search_icon_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item1"
            android:title="@string/home" />
        <item
            android:id="@+id/item2"
            android:title="@string/directions" />
        <item
            android:id="@+id/item3"
            android:title="@string/incidents" />
        <item
            android:id="@+id/item4"
            android:title="@string/settings" />
        <item
            android:id="@+id/item5"
            android:title="@string/about_us" />
    </group>


</menu>