<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/fragment_settings"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setting"
        android:layout_marginTop="100dp"
        android:textSize="40sp"
        android:textColor="#000000" />


    <Spinner
        android:id="@+id/spinnerTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="200dp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="183dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="126dp"
        android:text="@string/temperature"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/natures"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:text="@string/langauage"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/natures"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:textColor="#000000"
        tools:ignore="MissingConstraints">

    </TextView>

    <Spinner
        android:id="@+id/spinnerTempL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="200dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="183dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="370dp"
        android:text="@string/timeformat"
        android:textColor="#000000"
        android:textSize="24sp">

    </TextView>

    <Spinner
        android:id="@+id/spinnerTempF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="200dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="183dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="440dp"
        android:text="@string/precipitation"
        android:textColor="#000000"
        android:textSize="24sp">

    </TextView>

    <Spinner
        android:id="@+id/spinnerTempP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="200dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="183dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="510dp"
        android:text="@string/windspeed"
        android:textColor="#000000"
        android:textSize="24sp">

    </TextView>

    <Spinner
        android:id="@+id/spinnerTempWSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="200dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="183dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="580dp"
        android:text="@string/pressure"
        android:textColor="#000000"
        android:textSize="24sp">

    </TextView>

    <Spinner
        android:id="@+id/spinnerTempPR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="200dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="183dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="650dp"
        android:text="@string/notificatin"
        android:textColor="#000000"
        android:textSize="24sp">

    </TextView>

    <Spinner
        android:id="@+id/spinnerTempN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="200dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="183dp" />


</RelativeLayout>